--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
              
 <p>
                 If the customer is very smart, 
-				he or she will be able to achieve the desired result.
-				From whom, pleasures
+		he or she will be able to achieve the desired result.
+		From whom, pleasures
                 May he be pleased with the resilience of pains
                 they do not know that it prevents them from gaining knowledge!
                 it is very painful, it will be followed
@@ -80,15 +80,15 @@
         <div class="carousel-inner">
             <div class="carousel-item active">
                 <img src="img/food1.png"
-                    class="d-block w-100" alt="food">
+                    class="d-block w-100" alt="food" width="480" height="240">
             </div>
             <div class="carousel-item">
                 <img src="img/food2.png"
-                    class="d-block w-100" alt="food">
+                    class="d-block w-100" alt="food"  width="480" height="240">
             </div>
             <div class="carousel-item">
                 <img src="img/food3.png"
-                    class="d-block w-100" alt="food">
+                    class="d-block w-100" alt="food" width="480" height="240">
             </div>
         </div>
         <a class="carousel-control-prev"
