--- a/index.html
+++ b/index.html
@@ -51,31 +51,31 @@
             <h3>
                 Section for the text why this
                 restaurant is the best.
-            </h3>
+            </h3><br>
  
              
 <p>
-                If the customer is very smart, 
-		he or she will be able to achieve the desired result.
-		From whom, pleasures
-                May he be pleased with the resilience of pains
-                they do not know that it prevents them from gaining knowledge!
-                it is very painful, it will be followed
-                adipisicing elit. From whom, pleasures
-                May he be pleased with the resilience of pains
-                They don't know how to get it!
-                Lorem ipsum dolor sit amet, consectetur
-                adipisicing elit. From whom, pleasures
-                May he be pleased with the resilience of pains
-                they do not know that it prevents them from gaining knowledge!
-                let it be very painful.
+                If the customer is very smart, <br>
+		he or she will be able to achieve the desired result.<br>
+		From whom, pleasures<br>
+                May he be pleased with the resilience of pains<br>
+                they do not know that it prevents them from gaining knowledge!<br>
+                it is very painful, it will be followed<br>
+                adipisicing elit. From whom, pleasures<br>
+                May he be pleased with the resilience of pains<br>
+                They don't know how to get it!<br>
+                Lorem ipsum dolor sit amet, consectetur<br>
+                adipisicing elit. From whom, pleasures<br>
+                May he be pleased with the resilience of pains<br>
+                they do not know that it prevents them from gaining knowledge!<br>
+                let it be very painful.<br>
             </p>
  
         </article>
     </section>
  
    
-    <div id="carouselExampleControls"
+  <br><br><br>  <div id="carouselExampleControls"
         class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
