--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             </h3><br>
  
              
-<p>
+<br><p>
                 If the customer is very smart, <br>
 		he or she will be able to achieve the desired result.<br>
 		From whom, pleasures<br>
@@ -72,7 +72,7 @@
             </p>
  
         </article>
-    </section>
+    </section><br>
  
    
   <br><br><br>  <div id="carouselExampleControls"
